[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=6]
action = "start_game"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -237.0
margin_right = 243.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps!"
align = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -483.0
margin_right = 4.0
margin_bottom = -383.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[node name="SettingButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -174.0
margin_top = -346.0
margin_right = 80.0
margin_bottom = -246.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Setting"

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -213.0
margin_right = 4.0
margin_bottom = -113.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Exit"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
